Building channel and users

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,17 @@ project(template2
         LANGUAGES C)
 
 set(HEADER_LIST
-        "${template2_SOURCE_DIR}/include/common.h" "${template2_SOURCE_DIR}/include/cpt_request_builder.h"
+        "${template2_SOURCE_DIR}/include/common.h"
+        "${template2_SOURCE_DIR}/include/cpt_request_builder.h"
+        "${template2_SOURCE_DIR}/include/cpt_client.h"
+        "${template2_SOURCE_DIR}/include/users.h"
         )
 
 set(COMMON_SOURCE_LIST
         "${template2_SOURCE_DIR}/src/common.c"
         "${template2_SOURCE_DIR}/src/cpt_request_builder.c"
+        "${template2_SOURCE_DIR}/src/cpt_client.c"
+        "${template2_SOURCE_DIR}/src/users.c"
         )
 
 set(SERVER_SOURCE_LIST
