linked list fix 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(HEADER_LIST
         "${template2_SOURCE_DIR}/include/cpt_request_builder.h"
         "${template2_SOURCE_DIR}/include/cpt_client.h"
         "${template2_SOURCE_DIR}/include/users.h"
+        "${template2_SOURCE_DIR}/include/linked_list.h"
         )
 
 set(COMMON_SOURCE_LIST
@@ -20,6 +21,7 @@ set(COMMON_SOURCE_LIST
         "${template2_SOURCE_DIR}/src/cpt_request_builder.c"
         "${template2_SOURCE_DIR}/src/cpt_client.c"
         "${template2_SOURCE_DIR}/src/users.c"
+        "${template2_SOURCE_DIR}/src/linked_list.c"
         )
 
 set(SERVER_SOURCE_LIST
