Added sending and receiving messages if they're connected to the server, no channels features yet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,12 +50,15 @@ target_link_libraries(server PRIVATE ${LIBDC_POSIX})
 target_link_libraries(server PRIVATE ${LIBDC_UTIL})
 target_link_libraries(server PRIVATE ${LIBDC_FSM})
 target_link_libraries(server PRIVATE ${LIBDC_APPLICATION})
+target_link_libraries(server PRIVATE pthread)
+target_link_libraries(client PRIVATE pthread)
 target_link_libraries(client PRIVATE ${LIBM})
 target_link_libraries(client PRIVATE ${LIBDC_ERROR})
 target_link_libraries(client PRIVATE ${LIBDC_POSIX})
 target_link_libraries(client PRIVATE ${LIBDC_UTIL})
 target_link_libraries(client PRIVATE ${LIBDC_FSM})
 target_link_libraries(client PRIVATE ${LIBDC_APPLICATION})
+
 
 set_target_properties(server PROPERTIES OUTPUT_NAME "server")
 set_target_properties(client PROPERTIES OUTPUT_NAME "client")
